--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Los felinos de Costa Rica</title>
+	<link rel="stylesheet" href="estilos_felinos.css">
   </head> 
   <body>
   <header>
@@ -25,7 +26,7 @@
 	  <br><br>
 	  En Costa Rica hay seis especies de felinos:
 	  <ul>
-	  <li><a href=""><em>Leopardus pardalis (manigordo, ocelote)</em></a></li> 
+	  <li><a href=""><em>Leopardus pardalis (manigordo, ocelote)</em></a></li>
 	  <li><a href=""><em>Leopardus tigrinus (caucel, tigrillo)<em></a></li> 
 	  <li><a href=""><em>Leopardus wiedii (caucel, tigrillo)<em></a></li> 
 	  <li><a href=""><em>Pahtnera onca (tigre, jaguar, pantera)<em></a></li> 
