--- a/puma.html
+++ b/puma.html
@@ -16,6 +16,7 @@
 	</nav>	
   </header>
   <h1><em>Puma concolor</em></h1><br> <!-- esto es un título con cabecera H1 y con un salto de página br-->
+  <img src="img/puma_concolor.jpg" alt="Nombre alternativo" height="200">
 	<h2>Estado de conservación</h2>
 	<ul>
 	<li><strong>UICN:</strong> preocupación menor</li>
@@ -71,4 +72,7 @@
       <td>Especie</td><td>Leopardus pardalis</td>	  
     </tr>
   </tbody>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
 </table><p>
